--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.5.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
     "next": "14.2.14",
