--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^3.4.1",
     "cloudinary": "^2.5.1",
     "mapbox-gl": "^3.7.0",
     "mongodb": "^6.9.0",
